Fix two ContentHashFetcherTest.* tests' flakiness.

ContentHashFetcherJob::url_fetcher_ is always created on
ContentHashFetcherJob::creation_thread_ but it was possible for
it to be destroyed on blocking pool with the destruction of
ContentHashFetcherJob. This causes test flakiness, and this CL
makes sure we always destroy url_fetcher_ on correct thread.

As an optimization for the most common case, also destroy
ContentHashFetcherJob::url_fetcher_ once we're done with it (earlier
than above). However, note that because jobs can be cancelled, we
still need to make sure to destroy url_fetcher_ on correct thread from
ContentHashFetcherJob destructor.

BUG=702300
Test=No visible change. Fixing test flakiness and potential ref issue in
content verification code.
To repro the flake, I have put my machine on heavy load (compiling
chromium without goma and -j 1024), then ran these tests repeatedly
with --gtest_repeat flag. Tests will be flaky without this change, but
they always pass with this CL.

Review-Url: https://codereview.chromium.org/2815243002
Cr-Commit-Position: refs/heads/master@{#465468}

Former-commit-id: 825099a68908767ecd35d79b0888887c4ffccd0b